@@ -1,3 +1,6 @@
+2020-04-22  Kirit Saelensminde  <kirit@felspar.com>
+ * CSJ parsing now throws a proper `parse_error`
+
 2019-08-21  Kirit Saelensminde  <kirit@felspar.com>
  Improve the display of test failures from `fostgres-test`.
 
@@ -13,7 +16,7 @@
 
 2019-06-24  Pumidon Phathong  <pumidon@hot-now.com>
  GET requests that don't check the body content now return the response body.
- 
+
 2019-06-14  Kirit Saelensminde  <kirit@felspar.com>
  Object APIs can now process JSON arrays into a separate table.
 
